src/objects/Badge__c.object
<CustomObject>
    <fields>
        <fullName>Date_Earned__c</fullName>
        <label>Date Earned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Icon_Link__c</fullName>
        <label>Icon Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>Link to badge on Trailhead</description>
        <label>Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailblazer__c</fullName>
        <label>Trailblazer</label>
        <referenceTo>Trailblazer__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsert_Key__c</fullName>
        <description>Trailblazer Id + api_name from Trailhead</description>
        <externalId>true</externalId>
        <label>Upsert Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Badge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trailblazer__c</columns>
        <columns>Date_Earned__c</columns>
        <columns>Points__c</columns>
        <columns>Type__c</columns>
        <columns>Icon_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>